[package]
name = "ud-inversion-annotator"
version = "0.1.0"
authors = ["Tobias Pütz <tobias.puetz@uni-tuebingen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
itertools = "0.8"
conllx = "0.11"
stdinout = "0.4"